--- a/static/assets/css/principal.css
+++ b/static/assets/css/principal.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
-    padding: 14.4px;
     font-family: "Poppins", sans-serif;
 }
 
@@ -14,12 +13,15 @@ body{
     --white: white;
     --text-color-black: #24252A;
 }
-
+.container-fluid{
+    overflow: scroll;
+}
 .estadisticas{
     display: flex;
     justify-content: center;
     margin-bottom: 10px;/* editado */
     width: 100%;
+    padding-top: 20px;
 }
 
 .est-art{
@@ -27,7 +29,7 @@ body{
     grid-template-columns: 2fr 1fr;
     width: 80%;
     max-width: 241.2px;/* editado */
-    background-color: var(--est-art); 
+    background-color: var(--est-art);
     padding: 18px 9px;/* editado */
     border-radius: 10px;
     box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.2);
@@ -167,7 +169,7 @@ body{
     transition-delay: 0s;
 }
 
-.container .service-box .content
+.container .service-box .content2
 {
     position: relative;
     padding: 18px;/* editado */
@@ -180,19 +182,19 @@ body{
     transition-delay: 0s;
     font-size: 14px;
 }
-.container .service-box:hover .content
+.container .service-box:hover .content2
 {
     transform: scale(1);
     transition-delay: 0.25s;
 }
 
-.container .service-box .content h2
+.container .service-box .content2 h2
 {
     margin-top: 9px;/* editado */
     margin-bottom: 4.5px;/* editado */
     color: var(--text-color-black);
 }
-.container .service-box .content p
+.container .service-box .content2 p
 {
     margin-top: 9px;/* editado */
     font-weight: 300;
@@ -219,18 +221,18 @@ body{
         padding:9px 5px;
     }
 
-    .container .service-box .content{
+    .container .service-box .content2{
         font-size: 11px;
         line-height: 0px;
     }
 
 
-    .container .service-box .content h2{
+    .container .service-box .content2 h2{
         font-size: 15px;
         line-height: 15px;
     }
 
- 
+
 }
 
 /* Portatili mediano */
@@ -248,7 +250,7 @@ body{
         padding:9px 5px;
         height: 50px;
     }
-    
+
     .est-art .num-est{
         font-size: 25px;
     }
@@ -277,12 +279,12 @@ body{
     .estadisticas{
         flex-wrap: wrap;
     }
-    
 
-    .container .service-box .content{
+
+    .container .service-box .content2{
         font-size: 14px;
     }
-    .container .service-box .content p{
+    .container .service-box .content2 p{
         display: none;
     }
 
