--- a/static/assets/css/topmenu.css
+++ b/static/assets/css/topmenu.css
@@ -153,7 +153,7 @@
   }
   .wrapper .search.activate ion-icon{
     --ionicon-stroke-width: 60px;
-    color: var(--primer-color);
+    color: #8de02c;
   }
 
   .search .input{
