--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href={% static 'assets/css/topmenu.css' %} "">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="shortcut icon" href={% static 'Imgs/SVG/SS-LOGO.svg' %}/>
-    <title>POLARISS2</title>
+    <title>POLARISS</title>
   </head>
   <body id="body-pd">
     <nav class="top-navbar" id="navtop">
